Log 07/01/19 - Got Guergiev running (takes forever)

--- a/workspace.ipynb
+++ b/workspace.ipynb
@@ -4,7 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# MNS - Biological Plausible Deep Learning"
+    "# MNS - Biological Plausible Deep Learning\n",
+    "## Simple Backprop Baselines (DNNs and CNNs)\n",
+    "\n",
+    "#### 1. Data Setup - Loading and Viz\n",
+    "#### 2. PyTorch DNNs with Bayesian Optimization\n",
+    "#### 3. PyTorch CNNs with Bayesian Optimization\n",
+    "\n",
+    "#### TODO: 4. Plot Learning Dynamics - Weight Changes\n",
+    "#### TODO: 5. Plot BO Volatility"
    ]
   },
   {
@@ -507,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,13 +533,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded previously existing Log with 12 BO iterations.\n",
+      "Start Logging to ./logs/bo_logs_dnn_mnist.json\n",
+      "BO iter  1 | cv-acc: 0.9341 | best-acc: 0.9607 | time: 11349.73\n",
+      "BO iter  2 | cv-acc: 0.9036 | best-acc: 0.9607 | time: 139.18\n",
+      "Merged JSON logs - Total iterations: 14\n",
+      "Removed temporary log file.\n"
+     ]
+    }
+   ],
    "source": [
     "# Run Bayesian Optimization (UCB-Acquisition Fct) on DNN for MNIST\n",
     "opt_log = BO_NN(2, eval_dnn, \"dnn\", \"mnist\", hyper_space_dnn,\n",
-    "                num_epochs=5, k_fold=3, logging=True, verbose=True)"
+    "                num_epochs=2, k_fold=3, logging=True, verbose=True)"
    ]
   },
   {
@@ -542,7 +563,7 @@
    "source": [
     "# Run Bayesian Optimization (UCB-Acquisition Fct) on DNN for Fashion-MNIST\n",
     "opt_log = BO_NN(2, eval_dnn, \"dnn\", \"fashion\", hyper_space_dnn,\n",
-    "                num_epochs=5, k_fold=3, logging=True, verbose=True)"
+    "                num_epochs=2, k_fold=3, logging=True, verbose=True)"
    ]
   },
   {
