Log 08/01/19b - Added weight change viz

--- a/guergiev.ipynb
+++ b/guergiev.ipynb
@@ -38,7 +38,10 @@
     "\n",
     "# Import log-helper/learning plot functions\n",
     "from helpers import *\n",
-    "from plotting import *"
+    "from plotting import *\n",
+    "\n",
+    "# Guergiev et al (2017) - Segregated Compartments DNN Learning\n",
+    "import CompDNN as cdl"
    ]
   },
   {
@@ -87,46 +90,12 @@
     "X_train, X_test, y_train, y_test = train_test_split(X_mnist, y_mnist,\n",
     "                                                    stratify=y_mnist,\n",
     "                                                    random_state=0,\n",
-    "                                                    test_size=1./7)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def to_one_hot(y_train, y_test):\n",
-    "    oh_y_train = np.zeros((y_train.shape[0], 10))\n",
-    "    oh_y_test = np.zeros((y_test.shape[0], 10))\n",
-    "    \n",
-    "    oh_y_train[np.arange(oh_y_train.shape[0]), y_train] = 1\n",
-    "    oh_y_test[np.arange(oh_y_test.shape[0]), y_test] = 1\n",
-    "    \n",
-    "    return oh_y_train, oh_y_test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "                                                    test_size=1./7)\n",
+    "# Reshape to weird data layout for Guergiev\n",
     "X_train = X_train.reshape(X_train.shape[0], 784)\n",
     "X_test = X_test.reshape(X_test.shape[0], 784)\n",
     "y_train, y_test = to_one_hot(y_train, y_test)\n",
     "X_train, X_test, y_train, y_test = X_train.T, X_test.T, y_train.T, y_test.T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Guergiev et al (2017) - Segregated Compartments DNN Learning\n",
-    "import CompDNN as cdl\n",
-    "# import CompDNN_helpers as cdl_h"
    ]
   },
   {
