--- a/workspace_dnn.ipynb
+++ b/workspace_dnn.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,6 +494,39 @@
     "                   'padding': (1, 3)}\n",
     "\n",
     "opt_log = BO_NN(3, eval_cnn, \"cnn\", hyper_space_cnn, logging=False, verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run Bayesian Optimization (UCB-Acquisition Fct) on CNN for MNIST\n",
+    "opt_log = BO_NN(2, eval_dnn, \"cnn\", \"mnist\", hyper_space_cnn,\n",
+    "                num_epochs=10, k_fold=3, logging=True, verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run Bayesian Optimization (UCB-Acquisition Fct) on CNN for Fashion-MNIST\n",
+    "opt_log = BO_NN(2, eval_dnn, \"dnn\", \"fashion\", hyper_space_cnn,\n",
+    "                num_epochs=10, k_fold=3, logging=True, verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run Bayesian Optimization (UCB-Acquisition Fct) on DNN for CIFAR-10\n",
+    "opt_log = BO_NN(2, eval_dnn, \"cnn\", \"cifar10\", hyper_space_dnn,\n",
+    "                num_epochs=10, k_fold=3, logging=True, verbose=True)"
    ]
   },
   {
