Log 12/01/18a - Boxplot Vis of BO MLP run

--- a/report/background.tex
+++ b/report/background.tex
@@ -54,10 +54,10 @@
 \def\R{\mathbb{R}}
 
 \usepackage{todonotes}
-\newcommand{\rob}[1]{\todo[color=red!40!white]{Robert: #1}}
+\newcommand{\rob}[1]{\todo[color=red!40!white]{Rob: #1}}
 %-----------------------------------------------------------------
 \title{Biologically Plausible Deep Learning: \\
-		A Critical Literature Review}
+		A Critical Review}
 
 \author{
   Robert T. Lange \thanks{This progress report was submitted as part of the final project of the "Models of Neural Systems" (Winter Term 2018/2019) computer practical course taught and organized by Prof. Richard Kempter (Bernstein Center for Computational Neuroscience, Berlin).} \\
@@ -70,6 +70,8 @@
 
 
 \maketitle
+
+\listoftodos
 
 %--------------------------------------------------------------------
 
