Log 12/01/19c - Restructure for Python 3.6

--- a/workspace_dnn.ipynb
+++ b/workspace_dnn.ipynb
@@ -24,17 +24,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -59,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,27 +66,27 @@
     "import tensorflow as tf\n",
     "\n",
     "# Import Network Architectures\n",
-    "from DNN import DNN, eval_dnn\n",
-    "from CNN import CNN, eval_cnn\n",
+    "from models.DNN import DNN, eval_dnn\n",
+    "from models.CNN import CNN, eval_cnn\n",
     "\n",
     "# Import log-helper/learning plot functions\n",
-    "from helpers import *\n",
-    "from logger import *\n",
+    "from utils.helpers import *\n",
+    "from utils.logger import *\n",
     "\n",
     "# Import Bayesian Optimization Module\n",
-    "from bayesian_opt import BO_NN"
+    "from utils.bayesian_opt import BO_NN"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Torch Device: Tesla K80\n"
+      "Torch Device: Local CPU\n"
      ]
     }
    ],
@@ -109,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -122,8 +114,8 @@
    ],
    "source": [
     "# Create all necessary directory if non-existent\n",
-    "data_dir = os.getcwd() +\"/data\"\n",
     "global data_dir\n",
+    "data_dir = os.getcwd() +\"/data\"\n",
     "\n",
     "if not os.path.exists(data_dir):\n",
     "    os.makedirs(data_dir)\n",
@@ -140,10 +132,7 @@
     "        os.remove(os.path.join(log_dir, f))\n",
     "    print(\"Deleted Old TF/TensorBoard Log Files in Existing Log Directory\")\n",
     "    \n",
-    "models_dir = os.getcwd() + \"/models\"\n",
-    "if not os.path.exists(models_dir):\n",
-    "    os.makedirs(models_dir)\n",
-    "    print(\"Created New Model Directory\")"
+    "models_dir = os.getcwd() + \"/models\""
    ]
   },
   {
@@ -220,44 +209,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train| epoch  1| batch 20000/41996| acc: 0.9233| loss: 0.2678| time: 0.00\n",
-      "valid| epoch  1| batch 20000/41996| acc: 0.9188| loss: 0.2712| time: 0.00\n",
+      "train| epoch  1| batch 20000/41996| acc: 0.9894| loss: 0.0358| time: 0.29\n",
+      "valid| epoch  1| batch 20000/41996| acc: 0.9724| loss: 0.0917| time: 0.08\n",
       "-------------------------------------------------------------------------\n",
-      "train| epoch  1| batch 40000/41996| acc: 0.9466| loss: 0.1922| time: 0.00\n",
-      "valid| epoch  1| batch 40000/41996| acc: 0.9419| loss: 0.2022| time: 0.00\n",
+      "train| epoch  1| batch 40000/41996| acc: 0.9916| loss: 0.0301| time: 0.29\n",
+      "valid| epoch  1| batch 40000/41996| acc: 0.9727| loss: 0.0912| time: 0.10\n",
       "-------------------------------------------------------------------------\n",
-      "train| epoch  2| batch 20000/41996| acc: 0.9609| loss: 0.1387| time: 0.00\n",
-      "valid| epoch  2| batch 20000/41996| acc: 0.9542| loss: 0.1538| time: 0.00\n",
+      "train| epoch  2| batch 20000/41996| acc: 0.9921| loss: 0.0277| time: 0.29\n",
+      "valid| epoch  2| batch 20000/41996| acc: 0.9735| loss: 0.0895| time: 0.09\n",
       "-------------------------------------------------------------------------\n",
-      "train| epoch  2| batch 40000/41996| acc: 0.9658| loss: 0.1194| time: 0.00\n",
-      "valid| epoch  2| batch 40000/41996| acc: 0.9593| loss: 0.1417| time: 0.00\n",
+      "train| epoch  2| batch 40000/41996| acc: 0.9940| loss: 0.0235| time: 0.29\n",
+      "valid| epoch  2| batch 40000/41996| acc: 0.9729| loss: 0.0911| time: 0.08\n",
       "-------------------------------------------------------------------------\n",
-      "train| epoch  3| batch 20000/41996| acc: 0.9757| loss: 0.0862| time: 0.00\n",
-      "valid| epoch  3| batch 20000/41996| acc: 0.9663| loss: 0.1130| time: 0.00\n",
+      "train| epoch  3| batch 20000/41996| acc: 0.9943| loss: 0.0203| time: 0.31\n",
+      "valid| epoch  3| batch 20000/41996| acc: 0.9743| loss: 0.0879| time: 0.08\n",
       "-------------------------------------------------------------------------\n",
-      "train| epoch  3| batch 40000/41996| acc: 0.9766| loss: 0.0838| time: 0.00\n",
-      "valid| epoch  3| batch 40000/41996| acc: 0.9659| loss: 0.1165| time: 0.00\n",
+      "train| epoch  3| batch 40000/41996| acc: 0.9958| loss: 0.0179| time: 0.31\n",
+      "valid| epoch  3| batch 40000/41996| acc: 0.9730| loss: 0.0908| time: 0.09\n",
       "-------------------------------------------------------------------------\n",
-      "train| epoch  4| batch 20000/41996| acc: 0.9832| loss: 0.0596| time: 0.00\n",
-      "valid| epoch  4| batch 20000/41996| acc: 0.9705| loss: 0.0957| time: 0.00\n",
+      "train| epoch  4| batch 20000/41996| acc: 0.9956| loss: 0.0161| time: 0.29\n",
+      "valid| epoch  4| batch 20000/41996| acc: 0.9751| loss: 0.0892| time: 0.08\n",
       "-------------------------------------------------------------------------\n",
-      "train| epoch  4| batch 40000/41996| acc: 0.9825| loss: 0.0611| time: 0.00\n",
-      "valid| epoch  4| batch 40000/41996| acc: 0.9694| loss: 0.1025| time: 0.00\n",
+      "train| epoch  4| batch 40000/41996| acc: 0.9961| loss: 0.0148| time: 0.29\n",
+      "valid| epoch  4| batch 40000/41996| acc: 0.9733| loss: 0.0929| time: 0.07\n",
       "-------------------------------------------------------------------------\n",
-      "train| epoch  5| batch 20000/41996| acc: 0.9875| loss: 0.0436| time: 0.00\n",
-      "valid| epoch  5| batch 20000/41996| acc: 0.9726| loss: 0.0881| time: 0.00\n",
+      "train| epoch  5| batch 20000/41996| acc: 0.9959| loss: 0.0143| time: 0.29\n",
+      "valid| epoch  5| batch 20000/41996| acc: 0.9747| loss: 0.0931| time: 0.09\n",
       "-------------------------------------------------------------------------\n",
-      "train| epoch  5| batch 40000/41996| acc: 0.9876| loss: 0.0427| time: 0.00\n",
-      "valid| epoch  5| batch 40000/41996| acc: 0.9734| loss: 0.0913| time: 0.00\n",
+      "train| epoch  5| batch 40000/41996| acc: 0.9959| loss: 0.0140| time: 0.28\n",
+      "valid| epoch  5| batch 40000/41996| acc: 0.9739| loss: 0.0976| time: 0.08\n",
       "-------------------------------------------------------------------------\n",
-      "Test Accuracy: 0.9736\n"
+      "Test Accuracy: 0.9792\n"
      ]
     }
    ],
@@ -283,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -295,21 +284,8 @@
       "Learning Rate: 0.001\n",
       "Architecture of Cross-Validated Network:\n",
       "\t Layer 0: 784 Units\n",
-      "\t Layer 1: 500 Units\n",
-      "Cross-Validation Score Fold 1: 0.973474460062\n",
-      "Cross-Validation Score Fold 2: 0.973899627138\n",
-      "Cross-Validation Score Fold 3: 0.973468775449\n"
+      "\t Layer 1: 500 Units\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.9736142875494037"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -820,21 +796,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python (mns-project)",
+   "display_name": "Python3 (BioDL)",
    "language": "python",
-   "name": "mns-project"
+   "name": "biodl"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
