--- a/workspace_dnn.ipynb
+++ b/workspace_dnn.ipynb
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -284,8 +284,21 @@
       "Learning Rate: 0.001\n",
       "Architecture of Cross-Validated Network:\n",
       "\t Layer 0: 784 Units\n",
-      "\t Layer 1: 500 Units\n"
+      "\t Layer 1: 500 Units\n",
+      "Cross-Validation Score Fold 1: 0.9694892012341446\n",
+      "Cross-Validation Score Fold 2: 0.9687995542793468\n",
+      "Cross-Validation Score Fold 3: 0.975011786892975\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.9711001808021554"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -380,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,6 +478,26 @@
     "# Run Bayesian Optimization (UCB-Acquisition Fct) on DNN for MNIST\n",
     "opt_log = BO_NN(bo_iters, eval_dnn, \"dnn\", \"mnist\", hyper_space_dnn,\n",
     "                num_epochs=10, k_fold=3, logging=True, verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded previously existing Log with 51 BO iterations.\n",
+      "Start Logging to ./logs/bo_logs_dnn_mnist.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Run Bayesian Optimization (UCB-Acquisition Fct) on DNN for MNIST\n",
+    "opt_log = BO_NN(2, eval_dnn, \"dnn\", \"mnist\", hyper_space_dnn,\n",
+    "                num_epochs=2, k_fold=3, logging=True, verbose=True)"
    ]
   },
   {
